FEAT: Atom-Icon, Button 추가, Global Style 설정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -53,6 +53,9 @@
       "@customTemplate/*": [
         "src/component/template/*"
       ],
+      "@styles": [
+        "src/styles"
+      ],
       "@typings/*": [
         "src/typings/*"
       ]
