FEAT: Atom: Logo 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,9 @@
     "noFallthroughCasesInSwitch": true,
     "baseUrl": "./",
     "paths": {
+      "@img/*": [
+        "src/assets/img/*"
+      ],
       "@pages/*": [
         "src/pages/*"
       ],
